# Senior_Project_v2

./: .gitignore  1.pgm  README.md  frames.gv  map (copy).pgm  map.pgm
src/homewhere/: CMakeLists.txt  package.xml
src/homewhere/config/: costmap_common_params.yaml  costmap_global_params.yaml  costmap_local_params.yaml  dwa_local_planner_params.yaml  global_costmap_params.yaml  global_planner_params.yaml  gmapping_params.yaml  local_costmap_params.yaml  local_planner_dwa_params.yaml  map_table.yaml  move_base_params.yaml  planner_global_params.yaml  planner_local_dwa_params.yaml  planner_local_teb_params.yaml  ramps.yaml
src/homewhere/frame/: frames.gv
src/homewhere/launch/: amcl.launch  load_map.launch  main copy.launch  main.launch  main2.launch  main_7hd.launch  main_gems.launch  move_base.launch  multi_level.launch  multilevel.launch  navigation.launch  phy.launch  slam.launch
src/homewhere/rviz/: navigation.rviz
src/homewhere/src/: angle_sum.py  control.py  control_plugin.cpp  flatscan.py  gazebo_position.py  hardware_control.py  heightmap.py  kalman_filter.py  map_changer.py  marker.py  multilevel_nav_manager copy.py  multilevel_nav_manager.py  odometry.py  ramp_path.py  scan_to_cloud.py  servo_sim.py  slope_detector.py
src/homewhere/urdf/: box_robot.small.nolidar.xacro  box_robot.small.xacro  box_robot.urdf  box_robot.xacro  color.gazebo.xacro  plugin.xacro  test_imu.urdf  urdf.xacro
src/homewhere/world/: 7hd copy.world  7hd.world  7hde.world  7hdm.world  autorace.world  autorace_2020.world  eng3.world  house.world  ramp.world  rampnew.world  (+7 more)
(+77 files in other folders)
